# llm-manpage-rag

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  Makefile  QUICKSTART.md  README.md  data_ingestion.md  docker-compose.yml  env.example  ingest_manpages.py  manage.py  nginx.conf  pyproject.toml
accounts/: admin.py  models.py  search.py  services.py  urls.py  views.py
accounts/management/commands/: populate_manpages.py  populate_search_vectors.py
accounts/migrations/: 0001_initial.py  0002_document_chunk.py  0003_chunk_search_vector.py  0004_add_search_indexes.py
accounts/templates/accounts/: confirm_login.html  login.html  profile.html  search.html
manpager_project/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: docker_setup.sh  setup_data.sh
search/: admin.py  evaluation_utils.py  models.py  qdrant_service.py  rag_service.py  search.py  urls.py  views.py
search/management/commands/: populate_manpages.py  populate_search_vectors.py  run_evaluation.py
search/migrations/: 0001_initial.py  0002_evaluationquery_evaluationrun_evaluationresult.py  0003_alter_evaluationresult_error_message.py
search/templates/search/: ask.html  evaluation_comparison.html  evaluation_dashboard.html  evaluation_run_detail.html  search.html
templates/: base.html  home.html
