[project]
name = "manpager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tiktoken>=0.11.0",
    "django>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "dspy>=3.0.3",
]
